# xb-svcb

./: .gitattributes  .gitignore  LICENSE  README.md  data_home.json  install.ps1  install_prereqs.bat  release_notes_v007.md  release_notes_v008.md  release_notes_v009.md  release_notes_v010.md  release_notes_v011.md  release_notes_v012.md  release_notes_v013.md  release_notes_v014.md  release_notes_v015.md  release_notes_v016.md  release_notes_v017.md  release_notes_v018.md  release_notes_v019.md  release_notes_v020.md  release_notes_v021.md  release_notes_v022.md  release_notes_v023.md  run.bat  run.ps1  setup_env.bat
app/: README.md  config.py  main.py  pyproject.toml
app/api/: __init__.py  bridge.py  http_server.py
app/application/: __init__.py  audio_editor_service.py  conversion_service.py  model_hub_service.py  model_service.py  music_service.py  system_service.py  work_service.py
app/domain/: __init__.py  audio_editor.py  entities.py  enums.py
app/infrastructure/: __init__.py  audio_effects.py  audio_engine.py  clipboard.py  ddsp_engine.py  ddsp_worker.py  engine.py  f0_worker.py  ffmpeg_tool.py  hub_worker.py  inference_device.py  juce_vst3_host.py  paths.py  rvc_engine.py  rvc_worker.py  seedvc_engine.py  seedvc_worker.py  single_instance.py  storage.py  svc_engine.py  svc_worker.py  uvr_tool.py  uvr_worker.py  window_theme.py
app/tests/: test_audio_editor_workflows.py  test_configure_user_env.py  test_data_dir_name.py  test_ddsp_support.py  test_http_api.py  test_inference_devices.py  test_inference_regressions.py  test_install_ddsp.py  test_install_directml.py  test_juce_vst3_host.py  test_model_service.py  test_music_service.py  test_rvc_directml.py  test_seedvc_worker.py  test_uvr_status.py
assets/models/: README.md
assets/models/pretrain/: rmvpe.pt
assets/models/pretrain/nsf_hifigan/: NOTICE.zh-CN.txt  model
assets/models/pretrain/pc_nsf_hifigan/: NOTICE.txt  STATEMENTS.txt  config.json  model.ckpt
assets/models/seedvc/bigvgan_v2_44khz_128band_512x/: config.json
assets/models/uvr/: 5_HP-Karaoke-UVR.pth  download_checks.json  mdx_model_data.json  vr_model_data.json
docs/: api.md
install/: configure_user_env.py  install.py
installer/: README.md  build.ps1  make_icon.py  xb-svcb-app.spec  xb-svcb-version.txt  xb-svcb.iss
native/juce-vst3-host/: CMakeLists.txt  README.md  build.ps1
native/juce-vst3-host/src/: Main.cpp
web/: README.md  components.d.ts  package-lock.json  package.json  vite.config.ts
web/src/: App.vue  main.ts
web/src/api/: bridge.ts  index.ts  mock.ts  types.ts
web/src/layouts/: DefaultLayout.vue
web/src/router/: index.ts
web/src/stores/: models.ts  notifications.ts  profile.ts  system.ts  theme.ts  transfers.ts  works.ts
web/src/types/: components.d.ts
web/src/views/api/: api.vue
(+19 files in other folders)
